# Pangolin-Compliance-Suite

./: .env  .env_example  .gitignore  Dockerfile  README.md  celerybeat-schedule  docker-compose.yaml  generate_fake_data.py  manage.py  pyproject.toml  requirements.txt
activity_log/: apps.py
authentication/: urls.py  views.py
authentication/templates/authentication/: login.html
dashboard/: urls.py  views.py
dashboard/templates/dashboard/: dashboard.html  pagination.html
dashboard/templatetags/: dashboard_filters.py
docs/source/: conf.py  index.rst
engine/: models.py
engine/pangolin_sdk/: constants.py
engine/pangolin_sdk/configs/: aws.py  base.py  database.py  kubernetes.py
environments/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
environments/management/commands/: generate_environments.py
environments/migrations/: 0001_initial.py  0002_environment_file_content_environment_file_name_and_more.py
nginx/: nginx.conf
pangolin_compliance_suite/: __init__.py  asgi.py  celery.py  settings.py  urls.py  views.py  wsgi.py
pangolin_sdk/: .gitignore  README.md  exceptions.py  pyproject.toml  setup.py
pangolin_sdk/configs/: base.py  ssh.py  validation_rules.py  validation_rules.yaml  validators.py
pangolin_sdk/connections/: api.py  aws.py  base.py  database.py  kubernetes.py  ssh.py
pangolin_sdk/examples/: api_example.py  aws_example.py  database_example.py  kubernetes_example.py  ssh_example.py
pangolin_sdk/pangolin_sdk/configs/: api.py
pangolin_sdk/pangolin_sdk/connections/: base.py  kubernetes.py
pangolin_sdk/tests/: databases-docker-compose.yaml  test_api_connection.py  test_postgres_connection.py  test_ssh_connection.py
pangolin_sdk/tests/configs/: test_api.py
projects/: admin.py  forms.py  models.py  serializers.py  urls.py  views.py
projects/migrations/: 0001_initial.py
static/css/: monaco-edit.min.css
staticfiles/css/: yaml-editor.css
staticfiles/js/: yaml-editor.js
test_protcols/: apps.py
test_protocols/: admin.py  apps.py  models.py  services.py  tasks.py  urls.py  views.py
test_protocols/migrations/: 0001_initial.py  0002_verificationmethod_protocolrun_protocolresult_and_more.py  0002_verificationmethod_run.py  0003_remove_verificationmethod_run_and_more.py  0004_remove_testprotocol_verification_methods_and_more.py  0005_alter_protocolrun_status.py  0006_executionstep.py  0007_verificationmethod_expected_result.py  0008_verificationmethod_execution_step_verificationresult.py  0009_executionstep_name.py  0010_remove_verificationmethod_test_protocol.py  0011_remove_resultattachment_result_delete_protocolresult_and_more.py  0012_alter_verificationresult_verification_step.py  0013_remove_connectionconfig_host_and_more.py  0014_remove_executionstep_args.py
test_protocols/templatetags/: custom_filters.py
test_protocols/verifiers/: __init__.py  api_verifiers.py  base.py  db_verifiers.py  dict_verifiers.py  factory.py  list_verifiers.py  numeric_verifiers.py  string_verifiers.py
utils/: encryption.py
(+42 files in other folders)
