[project]
name = "pangolincompliancesuite"
version = "0.1.0"
description = "A Continuous Compliance and Monitoring Framework Im developing a tool"
authors = [
    {name = "manish59",email = "manishkumar.bobbili3@gmail.com"}
]
#readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "django (>=5.1.6,<6.0.0)",
    "python-decouple (>=3.8,<4.0)",
    "djangorestframework (>=3.15.2,<4.0.0)",
    "django-kafka (>=0.5.17,<0.6.0)",
    "celery (>=5.4.0,<6.0.0)",
    "redis (>=5.2.1,<6.0.0)",
    "django-celery-results (>=2.5.1,<3.0.0)",
    "django-celery-beat (>=2.7.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pangolin-sdk = {path = "/Users/manishkumarbobbili/PycharmProjects/pangolin_sdk/dist/pangolin_sdk-1.1.1-py3-none-any.whl"}

