[project]
name = "pangolin-sdk"
version = "1.1.1"
description = "Developing a unified validation and verification system for IQ that automates testing across databases, SSH, APIs, Kubernetes, AWS, and Azure"
authors = [
    {name = "Manish Kumar Bobbili", email = "manishkumar.bobbili3@gmail.com"}
]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "requests>=2.32.3,<3.0.0",
    "pyjwt>=2.10.1,<3.0.0",
    "sqlalchemy>=2.0.38,<3.0.0",
    "paramiko>=3.5.1,<4.0.0",
    "kubernetes>=32.0.0,<33.0.0",
    "mysql-connector-python>=9.2.0,<10.0.0",
    "cx-oracle>=8.3.0,<9.0.0",
    "psycopg2-binary>=2.9.10,<3.0.0",
    "boto3 (>=1.36.23,<2.0.0)",
]

[project.urls]
Homepage = "https://github.com/manish59/Pangolin/"
Repository = "https://github.com/manish59/Pangolin/"
Documentation = "https://github.com/manish59/Pangolin/blob/main/README.md"
"Bug Tracker" = "https://github.com/manish59/Pangolin/issues"

[project.optional-dependencies]
dev = [
    "black>=25.1.0,<26.0.0",
    "pytest>=8.3.4,<9.0.0",
    "coverage>=7.6.12,<8.0.0",
    "pylint>=3.3.4,<4.0.0",
    "poetry2setup>=1.1.0,<2.0.0",
]

[tool.poetry]
name = "pangolin-sdk"
version = "1.1.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"